# satellite-nadir-detection

./: README.md
cpp_pipeline/: CMakeLists.txt  build-linux.sh
cpp_pipeline/include/: draw_utils_stb.h  postprocess.h  preprocess.h
cpp_pipeline/model/: HS_photo_data_015d.c
cpp_pipeline/src/: draw_utils_stb.cc  main.cc  postprocess.cc  stb_impl.cc
model/: model_train_export.ipynb
model/dataset/: data.yaml  dataset.txt  labels.cache
model/dataset/labels/: 001d_HS_photo_data_001d_png.rf.cbc3652d2602168957e45f9eda78c789.txt  002d_HS_photo_data_002d_png.rf.090b2359f7c1cd8343b34c1e17ec37fd.txt  003d_HS_photo_data_003d_png.rf.6027a7d3f1ab132d97e76307d78dd31a.txt  004d_HS_photo_data_004d_png.rf.61ebb9461e7cfdd08b5f0a136bcd752d.txt  005d_HS_photo_data_005d_png.rf.db8b68b68c3ba8b5bb1619e45f6fcfcf.txt  006n_HS_photo_data_006n_png.rf.6e77f950d9ce1f8e4bc8d78a704e3343.txt  007n_HS_photo_data_007n_png.rf.fc6fb91761c4e32e690d2a969ddc136a.txt  008n_HS_photo_data_008n_png.rf.00acf919ef72bbd93f673ea3483a6fe6.txt  009n_HS_photo_data_009n_png.rf.65593b44c632522e623b38d3d53befe8.txt  010d_HS_photo_data_010d_png.rf.7a2731c5644eff1a2377f395d1895f03.txt  011d_HS_photo_data_011d_png.rf.2f22a1bee320cde66f4f169495507489.txt  012d_HS_photo_data_012d_png.rf.aca7e1adcd6e3a9885f0334bd4f99384.txt  013d_HS_photo_data_013d_png.rf.b9a9c45beae861dc3ac6f3d8aadd1f99.txt  014d_HS_photo_data_014d_png.rf.1f5858a6500a9baadfe041b70a63dc35.txt  015d_HS_photo_data_015d_png.rf.bfec0a13329d24095496ba940ef2361a.txt  (+6 more)
python_pipeline/: canvas.py  data_reader.py  main.py  rotations.py  utils.py  yolo_detector.py
rknn_demo_Linux/model/: HS_photo_data_002d.c  HS_photo_data_008n.c  yolov5n_256_rockchip.rknn
